Get products filtered by name (RED)
